--- a/Reto 3/Css/StylePro.css
+++ b/Reto 3/Css/StylePro.css
@@ -4,7 +4,9 @@
     margin: 0;
 }
 
+
 body{
+
     background: #4776E6;  /* fallback for old browsers */
     font-family: 'Open Sans', sans-serif;
 
@@ -13,7 +15,7 @@ body{
 /*Barra de navegacion*/
 .header{
     height: 4rem;
-    width: 96rem;
+    width: 90rem;
 }
 
 .nav-main figure img{
@@ -186,5 +188,12 @@ section p{
     font-size: 4rem;
     font-weight: bold;
     color: whitesmoke;
+
+}
+
+
+/*Media queries*/
+
+@media(max-width:680px) {
 
 }
