--- a/Reto 3/Css/StylePro.css
+++ b/Reto 3/Css/StylePro.css
@@ -1,41 +1,44 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+html{
+    width: 62.5%;
+
 }
 
-
 body{
-
-    background: #4776E6;  /* fallback for old browsers */
+    background: #4776E6;
     font-family: 'Open Sans', sans-serif;
 
 }
 
 /*Barra de navegacion*/
-.header{
-    height: 4rem;
-    width: 90rem;
+.nav-main{
+    height: 5rem;
+    width: 100rem;
 }
 
 .nav-main figure img{
     position: relative;
-    left: 2rem;
+    left: 0.1rem;
     width: 3.5rem;
 
 }
 
 .nav-main figure figcaption{
     position: absolute;
-    left: 6rem;
-    top: 2rem;
+    left: 7rem;
+    top: 1.5rem;
     font-weight: bold;
+    font-size: 2rem;
+}
+
+.nav-main figure figcaption:hover{
+    cursor: pointer;
+    color: #1DF2F2;
 }
 
 .nav-main ul li{
     position: relative;
-    top: -2.5rem;
-    left: 60rem;
+    top: -3.7rem;
+    left: 70rem;
     display: inline-block;
     border-right: 0.5px solid black;
     padding-right: 1rem;
@@ -47,12 +50,13 @@ body{
 }
 
 .nav-main--item .button{
-    width: 4.1rem;
-    height: 2rem;
+    width: 6.5rem;
+    height: 3rem;
     border-radius: 2rem;
     background-color: #8E54E9;
     border: 2px solid #4776E6 ;
     font-weight: bold;
+    font-size: 1.2rem;
     -webkit-box-shadow: 7px 7px 7px -3px rgba(0,0,0,0.63); 
     box-shadow: 7px 7px 7px -3px rgba(0,0,0,0.63);
     
@@ -68,18 +72,16 @@ body{
 
 aside{
 
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
-.left-container{
-    width: 16rem;
-    height: 32rem;
-    
-}
 
 .left-container div{
-    width:15rem;
-    height: 8.5rem;
+    width:18rem;
+    height: 10rem;
     border-radius: 20px;
     margin-bottom: 0.5rem;
     margin-top: 1.2rem;
@@ -106,14 +108,14 @@ aside{
     position: relative;
     width: 4rem;
     top: 1rem;
-    left: 5rem;
+    left: 4.1rem;
     
 }
 
 .left-container--item1 figcaption{
     position: relative;
     top: 2rem;
-    left: 4rem;
+    left: 2.7rem;
     
 }
 
@@ -121,14 +123,14 @@ aside{
     position: relative;
     width: 4rem;
     top: 1rem;
-    left: 5rem;
+    left: 4.1rem;
     
 }
 
 .left-container--item2 figcaption{
     position: relative;
     top: 2rem;
-    left: 4rem;
+    left: 3.2rem;
     
 }
 
@@ -136,14 +138,14 @@ aside{
     position: relative;
     width: 4rem;
     top: 1rem;
-    left: 5.5rem;
+    left: 4.1rem;
     
 }
 
 .left-container--item3 figcaption{
     position: relative;
     top: 2rem;
-    left: 4rem;
+    left: 3rem;
     
 }
 
@@ -151,14 +153,14 @@ aside{
     position: relative;
     width: 4.5rem;
     top: 1rem;
-    left: 5rem;
+    left: 4.1rem;
     
 }
 
 .left-container--item4 figcaption{
     position: relative;
     top: 1.5rem;
-    left: 3rem;;
+    left: 1.8rem;;
     justify-content: center;
     
 }
@@ -167,33 +169,34 @@ aside{
 /*Menu principal*/
 
 section{
-    display: inline-block;
+    display: flex;
     position: absolute;
     left: 20rem;
 
 }
 
 section figure img{
-    position: relative;
-    width: 35rem;
+    position: absolute;
+    width: 45rem;
     top: 4rem;
     left: 10rem;
 }
 
 
 section p{
-    position: relative;
-    left: 49rem;
-    top: 10rem;
-    font-size: 4rem;
+    position: absolute;
+    font-size: 6rem;
     font-weight: bold;
     color: whitesmoke;
+    left: 65rem;
+    top: 8rem;
 
 }
 
-
-/*Media queries*/
-
-@media(max-width:680px) {
-
+section p:hover{
+    cursor: pointer;
+    color: #1DF2F2;
 }
+
+/*Responsive*/
+
