--- a/batatabit/Style.css
+++ b/batatabit/Style.css
@@ -101,7 +101,7 @@ header img{
     width: 13px;
     height: 8px;
     margin-left: 10px;
-    background-image: url('../assets/icons/down-arrow.svg');
+    background-image: url('./assets/icons/down-arrow.svg');
 }
 
 main{
@@ -132,7 +132,7 @@ main{
     height: 200px;
     margin: 0 auto;
     margin-bottom: 50px;
-    background-image: url('../assets/img/Bitcoin.svg');
+    background-image: url('./assets/img/Bitcoin.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -237,7 +237,7 @@ main{
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url(../assets/icons/trending-down.svg);
+    background-image: url('./assets/icons/trending-down.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -249,7 +249,7 @@ main{
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url(../assets/icons/trending-up.svg);
+    background-image: url('./assets/icons/trending-up.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -305,7 +305,7 @@ main{
     height: 25px;
     top: -10px;
     left: calc(50% - 20px);
-    background-image: url(../assets/icons/batata.svg);
+    background-image: url('./assets/icons/batata.svg');
 }
 
 .product-detail--title{
@@ -350,7 +350,7 @@ main{
     width: 20px;
     height: 20px;
     margin-bottom: 10px;
-    background-image: url(../assets/icons/clock.svg);
+    background-image: url('./assets/icons/clock.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -361,7 +361,7 @@ main{
     width: 20px;
     height: 20px;
     margin-bottom: 10px;
-    background-image: url(../assets/icons/eye.svg);
+    background-image: url('./assets/icons/eye.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -372,7 +372,7 @@ main{
     width: 20px;
     height: 20px;
     margin-bottom: 10px;
-    background-image: url(../assets/icons/dollar-sign.svg);
+    background-image: url('./assets/icons/dollar-sign.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -383,7 +383,7 @@ main{
     width: 20px;
     height: 20px;
     margin-bottom: 10px;
-    background-image: url(../assets/icons/check-circle.svg);
+    background-image: url('./assets/icons/check-circle.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -409,7 +409,7 @@ main{
     width: 100%;
     min-width: 320px;
     height: 50vh;
-    background-image: url(../assets/img/bitcoinbaby2x.jpg);
+    background-image: url('./assets/img/bitcoinbaby2x.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -539,7 +539,7 @@ main{
     display: inline-block;
     width: 20px;
     height: 20px;
-    background-image: url(../assets/icons/orange-right-arrow.svg);
+    background-image: url('./assets/icons/orange-right-arrow.svg');
     vertical-align: text-bottom;
 }
 
